--- a/web/package.json
+++ b/web/package.json
@@ -32,9 +32,12 @@
   "nodemailer-smtp-transport": "^2.7.4",
   "passport": "^0.4.0",
   "passport-google-oauth20": "^1.0.0",
+  "query-string": "^6.8.1",
   "randomstring": "^1.1.5",
   "request": "^2.88.0",
   "socket.io": "^2.2.0",
+  "ua-parser-js": "^0.7.20",
+  "url-parse": "^1.4.7",
   "url-slug": "^2.0.0",
   "xoauth2": "^1.2.0"
  },
