--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
   "moment": "^2.24.0",
   "mongoose": "^5.4.14",
   "morgan": "^1.9.1",
+  "multer": "^1.4.1",
   "multiparty": "^4.1.3",
   "nodemailer": "^4.7.0",
   "nodemailer-smtp-transport": "^2.7.4",
