--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
   "morgan": "^1.9.1",
   "multer": "^1.4.1",
   "multiparty": "^4.1.3",
+  "node-adwords": "^201809.0.2",
   "nodemailer": "^4.7.0",
   "nodemailer-smtp-transport": "^2.7.4",
   "passport": "^0.4.0",
