--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
   "node-adwords": "^201809.0.2",
   "nodemailer": "^4.7.0",
   "nodemailer-smtp-transport": "^2.7.4",
+  "nodemon": "^1.19.1",
   "passport": "^0.4.0",
   "passport-google-oauth20": "^1.0.0",
   "query-string": "^6.8.1",
