--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
   "morgan": "^1.9.1",
   "multer": "^1.4.1",
   "multiparty": "^4.1.3",
+  "nanoid": "^2.0.3",
   "node-adwords": "^201809.0.2",
   "nodemailer": "^4.7.0",
   "nodemailer-smtp-transport": "^2.7.4",
@@ -41,6 +42,7 @@
   "ua-parser-js": "^0.7.20",
   "url-parse": "^1.4.7",
   "url-slug": "^2.0.0",
+  "uuid": "^3.3.2",
   "xoauth2": "^1.2.0"
  },
  "devDependencies": {
