--- a/web/package.json
+++ b/web/package.json
@@ -38,6 +38,7 @@
   "query-string": "^6.8.1",
   "randomstring": "^1.1.5",
   "request": "^2.88.0",
+  "shortid": "^2.2.14",
   "socket.io": "^2.2.0",
   "ua-parser-js": "^0.7.20",
   "url-parse": "^1.4.7",
