--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
   "nanoid": "^2.0.3",
   "node-adwords": "^201809.0.2",
   "node-fetch": "^2.6.0",
+  "node-schedule": "^1.3.2",
   "nodemailer": "^4.7.0",
   "nodemailer-smtp-transport": "^2.7.4",
   "passport": "^0.4.0",
