--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
  },
  "dependencies": {
   "@hapi/joi": "^15.0.3",
+  "@hapi/joi-date": "^1.3.0",
   "amqplib": "^0.5.3",
   "async": "^2.6.2",
   "bcrypt": "^3.0.4",
