--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
   "express": "^4.16.4",
   "express-useragent": "^1.0.12",
   "fetch": "^1.1.0",
+  "firebase-admin": "^8.4.0",
   "gmail-send": "^1.2.14",
   "http-errors": "~1.6.2",
   "http-status-codes": "^1.3.2",
