--- a/static-server/package.json
+++ b/static-server/package.json
@@ -10,6 +10,7 @@
     "config": "^2.0.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "ejs": "^2.7.1",
     "eslint": "^5.14.1",
     "express": "^4.16.4",
     "js-yaml": "^3.13.1",
