--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,7 @@
   "debug": "~2.6.9",
   "eslint": "^5.14.1",
   "express": "^4.16.4",
-  "express-useragent": "^1.0.12",
+  "express-useragent": "^1.0.13",
   "fetch": "^1.1.0",
   "firebase-admin": "^8.4.0",
   "gmail-send": "^1.2.14",
@@ -47,6 +47,7 @@
   "request": "^2.88.0",
   "shortid": "^2.2.14",
   "socket.io": "^2.3.0",
+  "sync-request": "^6.1.0",
   "twilio": "^3.39.1",
   "ua-parser-js": "^0.7.20",
   "url-parse": "^1.4.7",
