--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
   "express-useragent": "^1.0.13",
   "fetch": "^1.1.0",
   "firebase-admin": "^8.4.0",
+  "geoip-lite": "^1.4.0",
   "gmail-send": "^1.2.14",
   "http-errors": "~1.6.2",
   "http-status-codes": "^1.3.2",
@@ -45,9 +46,9 @@
   "query-string": "^6.8.1",
   "randomstring": "^1.1.5",
   "request": "^2.88.0",
+  "request-ip": "^2.1.3",
   "shortid": "^2.2.14",
   "socket.io": "^2.3.0",
-  "sync-request": "^6.1.0",
   "twilio": "^3.39.1",
   "ua-parser-js": "^0.7.20",
   "url-parse": "^1.4.7",
